<resources>
    <string name="app_name">TaxiIneu Sofer</string>
    <string name="editTextUser">Id</string>
    <string name="editTextPassword">Password</string>
    <string name="buttonLogin">Log in</string>
    <string name="saveLogin">Save credentials</string>
    <string name="logintitle">TaxiIneu Sofer Log in</string>
    <string name="orderstitle">Orders</string>
    <string name="tv_label_nr_masina">Select one of the available cars</string>
    <string name="select_car">Select car</string>
    <string name="buttonCar">Next</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="LoginSameCar">Login with</string>
    <string name="Tv_label_tel">Phone:</string>
    <string name="task_id">#0</string>
    <string name="task_date">00:00</string>
    <string name="task_min">00</string>
    <string name="Tv_tel">+407</string>
<!--activity order detail-->
    <string name="tv_labelorder">Order:</string>
    <string name="tv_labellat">Lat:</string>
    <string name="tv_lat">0.00</string>
    <string name="tv_labellon">Lon:</string>
    <string name="tv_lon">0.00</string>
    <string name="tv_lbladdress">Address:</string>
    <string name="tv_lblnume">Name:</string>
    <string name="tv_nume">No name</string>
    <string name="tv_lblphone">Phone:</string>
    <string name="tv_phone">No phone</string>
    <string name="need_permission">This app requires permission to be granted in order to work proper</string>
    <string name="not_available">Not available</string>
    <string name="maplink">maplink</string>
    <string name="switch1">Comment1</string>
    <string name="switch2">Comment2</string>
    <string name="tv_lbobs">Message:</string>
    <string name="tv_obs">Comment</string>
    <string name="buttonStart">Start</string>
    <string name="buttonClient">Client</string>
    <string name="buttonStop">Stop</string>
</resources>