<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rowBG"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:padding="10dp"
        android:layout_margin="10dp"

        android:background="#d65819"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/edit_task"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_phone_24"
                   app:tint="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete_task"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_sms_24"
                    android:tint="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFG"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/layout_bg"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:orientation="horizontal"
        android:visibility="visible">
        <!--android:background="@android:color/white"-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/task_name"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/task_desc"
                app:layout_constraintStart_toEndOf="@+id/task_id"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/first_names" />

            <TextView
                android:id="@+id/task_desc"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:lines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_name"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/task_id"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/task_id"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toTopOf="@+id/task_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/task_date"
                android:textColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/task_min"
                android:textColor="@color/red"
                app:layout_constraintBottom_toTopOf="@+id/task_desc"
                app:layout_constraintEnd_toEndOf="@+id/task_desc"
                app:layout_constraintTop_toBottomOf="@+id/task_date" />

            <TextView
                android:id="@+id/Tv_label_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Tv_label_tel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_desc" />

            <TextView
                android:id="@+id/Tv_tel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Tv_tel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Tv_label_tel"
                app:layout_constraintTop_toTopOf="@+id/Tv_label_tel" />
            <!--android:autoLink="phone"-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</RelativeLayout>